17-ratelimit/envoy.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    traffic_direction: OUTBOUND
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: edge_http
          use_remote_address: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: namespace.local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/resources" }
                route:
                  cluster: somecluster
                  rate_limits:
                  - actions:
                    - {generic_key: {descriptor_value: client}}
                    - {remote_address: {}}
                  - actions:
                    - {generic_key: {descriptor_value: resources}}
                    - header_value_match:
                        descriptor_value: post_request
                        headers:
                        - name: ":method"
                          exact_match: POST
                  - actions:
                    - {generic_key: {descriptor_value: resources}}
              - match: { prefix: "/" }
                route:
                  cluster: somecluster
                  rate_limits:
                  - actions:
                    - {generic_key: {descriptor_value: client}}
                    - {remote_address: {}}
          http_filters:
          - name: envoy.filters.http.ratelimit
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
              domain: domain1
              enable_x_ratelimit_headers: DRAFT_VERSION_03
              rate_limit_service:
                transport_api_version: V3
                grpc_service:
                    envoy_grpc:
                      cluster_name: rate-limit
          - name: envoy.filters.http.router
  clusters:
  - name: somecluster
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: somecluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8082
  - name: rate-limit
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: round_robin
    load_assignment:
      cluster_name: rate-limit
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 10004
